syntax = "proto3";

package services;

import "google/protobuf/empty.proto";

option go_package = "github.com/kiioong/are_they_playing/gen/go/internal/kiioong/services";

service LeagueManagement {
  rpc GetLeagues (google.protobuf.Empty) returns (stream League);
  rpc GetTeams (League) returns (stream Team);
  rpc AddTeamToFavourites(AddTeamToFavouritesData) returns (MutationResult);
  rpc AddTeam(Team) returns (Team);
  rpc DelTeam(Team) returns (MutationResult);
  rpc AddTeamToLeague(TeamLeague) returns (MutationResult);
  rpc AddGame(Game) returns (MutationResult);
  rpc DelGame(Game) returns (MutationResult);
}

message League {
  uint32 id = 1;
  string name = 2;
  repeated Team teams = 3;
}

message Team {
  int32 id = 1;
  string name = 2;
  string path_to_logo = 3;
}

message TeamLeague {
  League league = 1;
  Team team = 2;
}

message Game {
  Team home_team = 1;
  Team away_team = 2;
  uint64 start_timestamp = 3;
  League league = 4;
}

message AddTeamToFavouritesData {
  uint64 user_id = 1;
  Team team = 2;
}

message MutationResult {
  bool success = 1;
}